branch main - our-work page fix - added gap property to photos section

--- a/src/style/our-work.css
+++ b/src/style/our-work.css
@@ -61,6 +61,7 @@
 	flex-wrap: wrap;
 	justify-content: space-between;
 	padding-bottom: 60px;
+	gap: 30px;
 }
 
 .loadmore-container {
